# b2b-cloud

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
api/: __init__.py  authentication.py  backends.py  exceptions.py  fields.py  filters.py  pagination.py  permissions.py  serializers.py  urls.py  views.py  views_mixins.py
api/handlers/: schema.py
api/handlers/acc/: serializers.py  urls.py  views.py
api/handlers/cv/: serializers.py  urls.py  views.py
api/handlers/dictionary/: serializers.py  urls.py  views.py
api/handlers/main/: serializers.py  urls.py  views.py
api/schema/: urls.py  views.py
api/schema/inspectors/: field.py  query.py
apps/acc/: _signals_receivers.py  admin.py  apps.py  models.py  permissions.py  test_users.py
apps/acc/migrations/: 0001_initial.py  0002_round5.py  0003_round5_roles.py  0004_round5.py  0005_auto_20220906_1337.py
apps/currency/: models.py
apps/currency/migrations/: 0001_initial.py  0002_auto_20220906_1337.py
apps/cv/: admin.py  apps.py  models.py  models_upload_to.py
apps/cv/migrations/: 0001_initial.py  0002_alter_cv_gender.py  0002_round1_imports.py  0002_round_two.py  0003_round2.py  0004_round2_2.py  0005_round2_2_2.py  0006_auto_20220830_1740.py  0006_cveducation_diploma_number.py  0007_round3.py  0008_round3_2.py  0009_round3_3.py  0010_cv_import_one_more.py  0011_round5.py  0012_round5_competence_fk_cascade.py  0013_round5_dict_org.py  0014_round5_dict_org.py  0015_round5_dict_org.py  0016_round5_cv_rm.py  0017_round5_fk_2_user_set_null.py  0018_alter_cv_attributes.py  (+3 more)
apps/dictionary/: admin.py  apps.py  models.py
apps/main/: admin.py  apps.py  models.py
docker/: Dockerfile  docker-compose-demo.yml  docker-compose-dev.yml  docker-compose-review.yml
docker/entry-point/: entry-point.sh
envs/: .env_ru.example
fixtures/: acc.json  competence.json  cv.json  dictionary.json  main.json
project/: __init__.py  asgi.py  celery.py  settings.py  urls.py
project/contrib/: datetime.py  disable_for_loaddata.py  is_call_from_admin.py  middleware.py
project/msg/: __init__.py  template.py
project/settings/: __init__.py
static/admin/: admin.css  admin.css.map  admin.js  admin.less
static/drf-yasg/: wow.js
templates/admin/: base_site.html  duplicate_button.html  duplicate_delete_confirm.html
templates/django_admin_listfilter_dropdown/: dropdown_filter.html
templates/drf-yasg/: swagger-ui.html
templates/email/: base.html  layout.html  structure.html
(+168 files in other folders)
